--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Google Developer Student Club</h1>
             <small>Higher institute of technological studies of nabeul</small>
             <p>We imagine, We believe, and We achieve</p>
-             <a class="btn  btn btn-primary btn-lg" href="#" role="button">Contact Us</a>  
+             <a class="btn  btn btn-primary btn-lg" href="#contact" role="button">Contact Us</a>  
         </div>
         
         <div class="box2 col-lg-6 col-md-4">
@@ -56,7 +56,7 @@
         <div class="box2">
             <h2>About Us</h2>
             <p>Google Developer Student Club is created to help students gain more experience through hands-on learning (competitions, workshops, events, bootcamps, tutorials...).
-              Our mission is to integrate you to the outer-world and assist your proffessional path.
+              Our mission is to integrate you to the outer-world and assist your professional path.
             </p>
         </div>
     </div>
@@ -114,7 +114,7 @@
                 <p>Media Manager</p>
             </div>
             <div class=" box col-lg-4 col-6">
-                <img src="resources/ilyes.jpg" alt="ilyes ouni">
+                <img src="resources/ilyes.png" alt="ilyes ouni">
                 <h3>Ilyes Ouni</h3>
                 <p>Head Of Human Resources</p>
             </div>
@@ -200,7 +200,7 @@
               </h2>
               <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">We usually recruite our members at the start of each semester, but that doesn't mean we can't accept members at other times.
-                  feel free to <a href="#contact">cotact us</a> for more information about our recruitments. </div>
+                  Feel free to <a href="#contact">cotact us</a> for more information about our recruitments. </div>
               </div>
             </div>
             <div class="accordion-item">
@@ -210,7 +210,7 @@
                 </button>
               </h2>
               <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">You can find as in The Higher Institute of Technological Studies of Nabeul. The address is :Campus Universitaire Mrezgua - 8000 nabeul
+                <div class="accordion-body">You can find as in The Higher Institute of Technological Studies of Nabeul.<br>address: Campus Universitaire Mrezgua - 8000 nabeul
                 </div>
               </div>
             </div>
